<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
	   android:layout_height="100dp"
	   android:orientation="vertical"
	   >
	   <TextView
		        android:id="@+id/tv_adress_id"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		     />
	  <RelativeLayout
	   android:layout_marginTop="10dp"
	   android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	      >
    	<TextView
		        android:id="@+id/iv_item_adress_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="15dp"
		        android:textSize="20sp"
		        android:text="@string/personal_nickname"
		        android:textColor="@color/black"
		        />
    
		    <TextView
		        android:id="@+id/tv_item_adress_phone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="15dp"
		        android:textSize="20sp"
		        android:text="@string/personal_phone"
		        android:textColor="@color/black"
		     />
		 </RelativeLayout>
		 
		    <TextView
		        android:id="@+id/tv_item_adress"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="15dp"
		        android:layout_marginTop="5dp"
		        android:textSize="15sp"
		        android:text="@string/personal_adress"
		        android:textColor="#444444"
		     />

    	<RelativeLayout
			   android:layout_width="match_parent"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="10dp"
	      >
		    <View
		        android:layout_width="match_parent"
		        android:layout_height="0.2dp"
		        android:layout_marginBottom="5dp"
		        android:layout_alignParentTop="true"
		        android:background="#eeeeee"
		        />
		    <CheckBox 
		        android:id="@+id/ck_item_default"
    		    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:drawableLeft="@drawable/default_adress_clicked"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="10dp"
		        android:button="@null"
		        android:textColor="@color/blueLight"
		        android:text="@string/default_adress"
		        />
		    
    		<Button 
    		    android:id="@+id/btn_item_delete"
    		    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="#00000000"
		        android:layout_alignParentBottom="true"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="15dp"
		        android:drawableLeft="@drawable/delete"
		        android:textColor="#555555"
		        android:text="@string/delete_adress"
    		    />
    		
    		<Button 
    		    android:id="@+id/btn_item_edit"
    		    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="#00000000"
		        android:layout_marginRight="30dp"
		        android:layout_alignParentBottom="true"
		        android:layout_toLeftOf="@id/btn_item_delete"
		        android:drawableLeft="@drawable/edit"
		        android:textColor="#555555"
		        android:text="@string/edit_adress"
    		    />
    		 </RelativeLayout>
    		 
    		<View
		        android:layout_width="match_parent"
		        android:layout_height="0.2dp"
		        android:layout_marginBottom="3dp"
		        android:background="#eeeeee"
		        />

</LinearLayout>
