<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="wrap_content"
	   android:layout_height="50dp"
	   >
	   
    	<TextView
		        android:id="@+id/iv_item_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="15dp"
		        android:layout_centerVertical="true"
		        android:textSize="18sp"
		        android:text="@string/personal_nickname"
		        android:textColor="@color/black"
		        />
    
		    <TextView
		        android:id="@+id/tv_item_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="30dp"
		        android:layout_toRightOf="@id/iv_item_name"
		        android:layout_centerVertical="true"
		        android:textSize="18sp"
		        android:text="@string/personal_adress"
		        android:textColor="#555555"
		     />
		    
		    <Button
		        android:id="@+id/btn_item_update"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="15dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:background="#00000000"
		        android:textSize="18sp"
		        android:text="@string/personal_update"
		        android:textColor="@color/blueLight"
		     />

    		<View
		        android:layout_width="match_parent"
		        android:layout_height="0.2dp"
		        android:background="#eeeeee"
		        android:layout_alignParentBottom="true"
		        />

</RelativeLayout>
