<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" 
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/search_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button 
            android:id="@+id/location_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/arrow_left"
            />
        
        <com.sozunyi.xiaolimao.widgets.AutoClearEditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableBottom="@drawable/edit_bottom"
            android:focusable="true"
            android:hint="@string/location_input"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/lightsteelblue"
            android:textSize="@dimen/medium_text_size" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/search_box_icon" />
    </LinearLayout>

    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_gravity="left"
            android:textColor="@color/gray"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/courent_location"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <com.sozunyi.xiaolimao.view.MarqueeTextView
            android:id="@+id/tv_courentlocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        	android:ellipsize="marquee"
        	android:scrollHorizontally="true"
        	android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/courent_location"
            />
        <Button 
            android:id="@+id/btn_relocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="@color/dodgerblue"
            android:background="#00000000"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/gps"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/re_location"
            />
        
        
        </LinearLayout>
    
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
      <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_gravity="left"
            android:textColor="@color/gray"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/my_adress"
            />
    
     <ListView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@null"
        android:scrollbars="none"
        android:visibility="gone" /> 
        
      </LinearLayout>

	
        
</LinearLayout>