<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" 
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/search_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button 
            android:id="@+id/search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/arrow_left"
            />
        
        <com.sozunyi.xiaolimao.widgets.AutoClearEditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableBottom="@drawable/edit_bottom"
            android:focusable="true"
            android:hint="@string/index_search_edit_hint"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/lightsteelblue"
            android:textSize="@dimen/medium_text_size" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/search_box_icon" />
    </LinearLayout>

    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/search_remen"
            />
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/gray"
            />
    
     <ListView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_top_layout"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@null"
        android:scrollbars="none"
        android:visibility="gone" /> 

	<LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

    
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:background="@drawable/logo" />
        
          <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
           android:layout_gravity="center"
            android:text="@string/search_info"
            />
    </LinearLayout>
        
</LinearLayout>